--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.android.material:material:1.7.0-alpha02'
     implementation 'com.mikhaellopez:circularimageview:4.3.0'
+
+    //implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation 'androidx.recyclerview:recyclerview:1.3.0-alpha02'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+
 }
