--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
 
     implementation 'me.dm7.barcodescanner:zxing:1.9.13'
+    implementation 'com.mikhaellopez:circularimageview:4.3.0'
 
 
 }
